/**
\page changelog Changelog

\section c018 version 0.17 -> 0.17+

 - Avoid unnecessary shift-operations to calculate constant values. 
   (01-feb-2008, Camiel Vanderhoeven)
 - Improved speed by remembering the number of instructions left in current
   memory page, so that the translation-buffer doens't need to be consulted
   on every instruction fetch when the Icache is disabled. (30-jan-2008,
   Camiel Vanderhoeven)
 - Remember separate last found translation-buffer entries for read and write 
   operations. This should help with memory copy operations. (29-jan-2008,
   Camiel Vanderhoeven)
 - Avoid interrupts from the new IDE device that originated while interrupts
   were disabled. (29-jan-2008, Brian Wheeler)
 - Improved floating-point exception handling. (28-jan-2008, Camiel 
   Vanderhoeven)
 - Lifted hardcoded file-size limit of 10,000 bytes for config file. 
   (26-jan-2008, Camiel Vanderhoeven)
 - Bugfix in the VAX floating point STF and the IEEE floating point STS 
   instructions. (26-jan-2008, Camiel Vanderhoeven)
 - Don't repeat interrupts from the new IDE controller too soon. 
   (26-jan-2008, Brian Wheeler)
 - Do unaligned trap only when a page boundary is crossed. Something is 
   causing alignment traps in the SRM console, with the DAT bit set to false,
   and no OS handler in place. Also, when OpenVMS boots there are alignment 
   traps that shouldn't happen. None of these cross page boundaries, so we're 
   safe for now. (26-jan-2008, Camiel Vanderhoeven)
 - Trap on unaligned memory access. The previous implementation where
   unaligned accesses were silently allowed could go wrong when page
   boundaries are crossed. (25-jan-2008, Camiel Vanderhoeven)
 - Allow specifying autocreate_size on a disk image to have it created if it 
   doesn't exist. (25-jan-2008, Camiel Vanderhoeven)
 - Added an option to disable the processor Icache. The emulator runs faster
   when this is disabled, but that might lead to problems with some OS'es. 